--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body class="page">
     <header class="header">
+      <a href="#0" class="header__logo">
+        &lt;/HTML&gt;
+      </a>
       <h1 class="header__title">
-        &lt/HTML&gt
-        <span class="header__under-title">
-          закрывающий тег
-        </span>
+        закрывающий тег
       </h1>
     </header>
     <main>
@@ -27,9 +27,9 @@
         </h2>
         <div class="card__image-container">
           <p class="card__image-label" aria-hidden="true">
-            &ltstart&gt
+            &lt;start&gt;
           </p>
-          <img class="card__image filter-1" src="./images/pic-1.jpg" alt="Улыбающийся рыжий кот в пиксельном стиле." loading="lazy">
+          <img class="card__image filter-none" src="./images/pic-1.jpg" alt="Улыбающийся рыжий кот в пиксельном стиле." loading="lazy">
         </div>
         <div class="card__description">
           <p class="card__description-text">
@@ -49,7 +49,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--heart-color)"/>
               </svg>            
             </button>
-            <button type="button" class="card__like-button">
+            <button type="button" class="card__like-button action-button">
               <span class="button__text">
                 Like
               </span>
@@ -63,9 +63,9 @@
         </h2>
         <div class="card__image-container">
           <p class="card__image-label" aria-hidden="true">
-            &lthello world&gt
+            &lt;hello world&gt;
           </p>
-          <img class="card__image filter-2" src="./images/pic-2.jpg" alt="Гусь у реки в пиксельном стиле." loading="lazy">
+          <img class="card__image filter-brightness" src="./images/pic-2.jpg" alt="Гусь у реки в пиксельном стиле." loading="lazy">
         </div>
         <div class="card__description">
           <p class="card__description-text">
@@ -85,7 +85,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--heart-color)"/>
               </svg>                 
             </button>
-            <button type="button" class="card__like-button">
+            <button type="button" class="card__like-button action-button">
               <span class="button__text">
                 Like
               </span>
@@ -99,9 +99,9 @@
         </h2>
         <div class="card__image-container">
           <p class="card__image-label" aria-hidden="true">
-            &ltlunch time&gt
+            &lt;lunch time&gt;
           </p>
-          <img class="card__image filter-3" src="./images/pic-3.jpg" alt="Такси у кафе ночью в пиксельном стиле." loading="lazy">
+          <img class="card__image filter-hue" src="./images/pic-3.jpg" alt="Такси у кафе ночью в пиксельном стиле." loading="lazy">
         </div>
         <div class="card__description">
           <p class="card__description-text">
@@ -121,7 +121,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--heart-color)"/>
               </svg>                 
             </button>
-            <button type="button" class="card__like-button">
+            <button type="button" class="card__like-button action-button">
               <span class="button__text">
                 Like
               </span>
@@ -135,9 +135,9 @@
         </h2>
         <div class="card__image-container">
           <p class="card__image-label" aria-hidden="true">
-            &ltquiet work&gt
+            &lt;quiet work&gt;
           </p>
-          <img class="card__image filter-4" src="./images/pic-4.jpg" alt="Кот на подоконнике смотрит на закат в пиксельном стиле." loading="lazy">
+          <img class="card__image filter-saturate" src="./images/pic-4.jpg" alt="Кот на подоконнике смотрит на закат в пиксельном стиле." loading="lazy">
         </div>
         <div class="card__description">
           <p class="card__description-text">
@@ -156,7 +156,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--heart-color)"/>
               </svg>                 
             </button>
-            <button type="button" class="card__like-button">
+            <button type="button" class="card__like-button action-button">
               <span class="button__text">
                 Like
               </span>
@@ -170,9 +170,9 @@
         </h2>
         <div class="card__image-container">
           <p class="card__image-label" aria-hidden="true">
-            &ltlove & support&gt
+            &lt;love & support&gt;
           </p>
-          <img class="card__image filter-5" src="./images/pic-5.jpg" alt="Кот и кошка на крыше на фоне заката в пиксельном стиле." loading="lazy">
+          <img class="card__image filter-sepia" src="./images/pic-5.jpg" alt="Кот и кошка на крыше на фоне заката в пиксельном стиле." loading="lazy">
         </div>
         <div class="card__description">
           <p class="card__description-text">
@@ -192,7 +192,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--heart-color)"/>
               </svg>                 
             </button>
-            <button type="button" class="card__like-button">
+            <button type="button" class="card__like-button action-button">
               <span class="button__text">
                 Like
               </span>
@@ -206,9 +206,9 @@
         </h2>
         <div class="card__image-container">
           <p class="card__image-label" aria-hidden="true">
-            &ltinterest&gt
+            &lt;interest&gt;
           </p>
-          <img class="card__image filter-6" src="./images/pic-6.jpg" alt="Кот анфас в пиксельном стиле." loading="lazy">
+          <img class="card__image filter-grayscale" src="./images/pic-6.jpg" alt="Кот анфас в пиксельном стиле." loading="lazy">
         </div>
         <div class="card__description">
           <p class="card__description-text">
@@ -228,7 +228,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--heart-color)"/>
               </svg>                 
             </button>
-            <button type="button" class="card__like-button">
+            <button type="button" class="card__like-button action-button">
               <span class="button__text">
                 Like
               </span>
@@ -242,9 +242,9 @@
         </h2>
         <div class="card__image-container">
           <p class="card__image-label" aria-hidden="true">
-            &ltneed answers&gt
+            &lt;need answers&gt;
           </p>
-          <img class="card__image filter-7" src="./images/pic-7.jpg" alt="Рабочий компьютерный стол в пиксельном стиле." loading="lazy">
+          <img class="card__image filter-blur" src="./images/pic-7.jpg" alt="Рабочий компьютерный стол в пиксельном стиле." loading="lazy">
         </div>
         <div class="card__description">
           <p class="card__description-text">
@@ -263,7 +263,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--heart-color)"/>
               </svg>                 
             </button>
-            <button type="button" class="card__like-button">
+            <button type="button" class="card__like-button action-button">
               <span class="button__text">
                 Like
               </span>
@@ -277,9 +277,9 @@
         </h2>
         <div class="card__image-container">
           <p class="card__image-label" aria-hidden="true">
-            &ltfurther - more&gt
+            &lt;further - more&gt;
           </p>
-          <img class="card__image filter-8" src="./images/pic-8.jpg" alt="Морской берег с полной луной в пиксельном стиле." loading="lazy">
+          <img class="card__image filter-composite" src="./images/pic-8.jpg" alt="Морской берег с полной луной в пиксельном стиле." loading="lazy">
         </div>
         <div class="card__description">
           <p class="card__description-text">
@@ -299,7 +299,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--heart-color)"/>
               </svg>                 
             </button>
-            <button type="button" class="card__like-button">
+            <button type="button" class="card__like-button action-button">
               <span class="button__text">
                 Like
               </span>
@@ -307,9 +307,7 @@
           </div>
         </div>
       </article>
-    </main>
-    <footer class="footer">
-      <button class="footer__button" type="button" onclick="window['dialog'].showModal();">
+      <button class="save__button action-button" type="button" onclick="window['dialog'].showModal();">
         <svg class="button__icon">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
@@ -324,11 +322,15 @@
         <p class="dialog__text">
           Вставьте дискету, чтобы продолжить
         </p>
-        <button type="submit" class="dialog__button" onclick="window['dialog'].close()">
-          ОК
-        </button>
-    </dialog> 
-    </footer>
+        <form class="dialog__form" method="dialog">
+          <button type="submit" class="dialog__form-button action-button">
+            <span class="button__text">
+              ОК
+            </span>
+          </button>
+        </form>
+      </dialog>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
